Update and rename 2022-11.md to 2022-11-1.md

--- a/_publications/2022-11-1.md
+++ b/_publications/2022-11-1.md
@@ -1,9 +1,9 @@
 ---
 title: "Exploring uncertainty measures in convolutional neural network for semantic segmentation of oral cancer images"
 collection: publications
-permalink: /publication/2022-11
+permalink: /publication/2022-11-1
 excerpt: ''
-date: 2022-11
+date: 2022-11-1
 venue: 'Journal of Biomedical Optics'
 paperurl: 'https://www.spiedigitallibrary.org/journals/journal-of-biomedical-optics/volume-27/issue-11/115001/Exploring-uncertainty-measures-in-convolutional-neural-network-for-semantic-segmentation/10.1117/1.JBO.27.11.115001.full'
 ---
