--- a/_publications/2022-08-01.md
+++ b/_publications/2022-08-01.md
@@ -1,9 +1,9 @@
 ---
 title: "Diagnosis of paediatric tuberculosis by optically detecting two virulence factors on extracellular vesicles in blood samples"
 collection: publications
-permalink: /publication/2022-08
+permalink: /publication/2022-08-01
 excerpt: ''
-date: 2022-08
+date: 2022-08-01
 venue: 'Nature Biomedical Engineering'
 paperurl: 'https://www.nature.com/articles/s41551-022-00922-1'
 ---
